# fast-api-demo

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 84ee8e1fcc98_initial.py  e4d9ce4a0e5d_initial.py
app/: database.py  main.py
app/config/: config.py
app/models/: item.py  user.py
app/routers/: items.py  users.py
app/schemas/: item.py  user.py
app/services/: item.py  user.py
dotfiles/: .env
