[tool.poetry]
name = "fast-api-demo"
version = "0.1.0"
description = ""
authors = ["Tibor"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.106.0"
uvicorn = "^0.25.0"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
