[tool.poetry]
name = "fast-api-demo"
version = "0.1.0"
description = ""
authors = ["Tibor"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.106.0"
uvicorn = "^0.25.0"
pydantic = "^2.5.3"
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
